Added Compose Dependencies
- Upgraded Kotlin to 2.1.10
- Added ComposeCompilerGradlePlugin
- Added ComposeActivity and Theme
- Updated CompileSdk to 35
- Updated Core Dependencies
- Modified ViewModelFactory for changes in dependency

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="no_results">No results 😓</string>
     <string name="unknown">\?</string>
     <string name="retry">Retry</string>
+    <string name="title_activity_compose">ComposeActivity</string>
 </resources>
